--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,18 @@
 {
-  "functions": {
-    "api/**/*.ts": {
-      "runtime": "nodejs16.1"
+  "version": 2,
+  "builds": [
+    {
+      "src": "src/main.js",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     }
-  }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
