--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,9 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/main.js",
+      "src": "package.json",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+      "config": { "distDir": "dist" }
     }
   ],
   "routes": [
