--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,9 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
-  ]
+  ],
+  "env": {
+    "NODE_VERSION": "16",
+    "NODE_OPTIONS": "--openssl-legacy-provider"
+  }
 }
