--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "name": "wallet",
     "version": "0.1.4",
     "scripts": {
-    "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "serve": "vue-cli-service serve",
-    "lint": "vue-cli-service lint"
+      "dev": "vue-cli-service serve",
+      "build": "vue-cli-service build",
+      "serve": "vue-cli-service serve",
+      "lint": "vue-cli-service lint",
+      "install-nvm": "curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash && source ~/.bashrc",
+      "setup-node": "nvm install 16 && nvm use 16 && npm install --save-dev node-gyp --legacy-peer-deps && npm install --legacy-peer-deps"
     },
     "dependencies": {
         "@avalabs/avalanche-wallet-sdk": "0.20.0-alpha.11",
